[gd_scene load_steps=22 format=3 uid="uid://peahobrq6jl2"]

[ext_resource type="Script" uid="uid://cso3d41pjfaee" path="res://script/level_select.gd" id="1_f8mdw"]
[ext_resource type="Texture2D" uid="uid://dyaghlpxa838g" path="res://assets/FreeGUI/png/BG.png" id="2_ajvc4"]
[ext_resource type="Texture2D" uid="uid://do47lnvlxitg4" path="res://assets/FreeGUI/png/Window.png" id="3_oy5py"]
[ext_resource type="FontFile" uid="uid://cxh88to8mitlu" path="res://assets/brady_bunch/BradBunR.ttf" id="4_1m5pn"]
[ext_resource type="Texture2D" uid="uid://s1suf4xyt0p3" path="res://assets/FreeGUI/png/Button.png" id="5_wtyro"]
[ext_resource type="PackedScene" uid="uid://dp5ennbbw03t6" path="res://scene/tools/level-button.tscn" id="6_p4j5i"]
[ext_resource type="Texture2D" uid="uid://b5cbm66ott1pe" path="res://assets/picture/belajar.jpeg" id="7_1m5pn"]
[ext_resource type="PackedScene" uid="uid://dwpr14r382rxj" path="res://scene/tools/notdragndrop.tscn" id="7_wtyro"]
[ext_resource type="Script" uid="uid://cqsh6jlmhwy8y" path="res://script/parallax_background.gd" id="8_oy5py"]
[ext_resource type="Texture2D" uid="uid://6blhysktenng" path="res://assets/picture/senyum.jpeg" id="8_wtyro"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b362m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ny0sn"]
atlas = ExtResource("3_oy5py")
region = Rect2(1057, 162, 926, 741)

[sub_resource type="AtlasTexture" id="AtlasTexture_qunhn"]
atlas = ExtResource("5_wtyro")
region = Rect2(1551, 972, 181, 190)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ny0sn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sw5pt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ajvc4"]
atlas = ExtResource("5_wtyro")
region = Rect2(1551, 972, 181, 190)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pqee4"]
texture = SubResource("AtlasTexture_ajvc4")
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ajvc4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p4j5i"]
texture = ExtResource("8_wtyro")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oy5py"]
texture = ExtResource("7_1m5pn")

[sub_resource type="AtlasTexture" id="AtlasTexture_wtyro"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8mdw")

[node name="Parallax2D" type="Parallax2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Parallax2D"]
script = ExtResource("8_oy5py")

[node name="ParallaxLayer" type="ParallaxLayer" parent="Parallax2D/ParallaxBackground"]
motion_mirroring = Vector2(2400, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D/ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(1213.0001, 541.5)
scale = Vector2(0.8046667, 0.60611105)
texture = ExtResource("2_ajvc4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_b362m")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -641.5
offset_top = -474.5
offset_right = 641.5
offset_bottom = 474.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ny0sn")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 962.0
offset_top = 77.0
offset_right = 1410.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("4_1m5pn")
theme_override_font_sizes/font_size = 100
text = "Pilih Kegiatan"
horizontal_alignment = 1

[node name="Home" type="Button" parent="."]
layout_mode = 0
offset_right = 181.0
offset_bottom = 190.0
theme_override_icons/icon = SubResource("AtlasTexture_qunhn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ny0sn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sw5pt")
theme_override_styles/hover = SubResource("StyleBoxTexture_pqee4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ajvc4")

[node name="TextureRect" parent="." instance=ExtResource("7_wtyro")]
z_index = 1
layout_mode = 0
offset_left = 743.0
offset_top = 320.0
offset_right = 1112.0
offset_bottom = 658.0
texture = ExtResource("7_1m5pn")

[node name="TextureRect2" parent="." instance=ExtResource("7_wtyro")]
z_index = 1
layout_mode = 0
offset_left = 1270.0
offset_top = 324.0
offset_right = 1639.0
offset_bottom = 662.0
texture = ExtResource("8_wtyro")

[node name="Panel4" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 97.0
offset_top = 385.0
offset_right = 497.0
offset_bottom = 685.0
theme_override_styles/panel = SubResource("StyleBoxTexture_p4j5i")

[node name="Panel3" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 94.0
offset_top = 380.0
offset_right = 494.0
offset_bottom = 680.0
theme_override_styles/panel = SubResource("StyleBoxTexture_oy5py")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -427.0
offset_top = -395.0
offset_right = 427.0
offset_bottom = -191.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 200
columns = 2

[node name="TextureButton" parent="GridContainer" instance=ExtResource("6_p4j5i")]
z_index = 2
layout_mode = 2
texture_pressed = SubResource("AtlasTexture_wtyro")
stretch_mode = 3
script = null

[node name="Label2" type="Label" parent="GridContainer/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 57.0
offset_right = -25.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0.6901961, 0.8627451, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_1m5pn")
theme_override_font_sizes/font_size = 50
text = "Jadwal Harian Anak"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureButton2" parent="GridContainer" instance=ExtResource("6_p4j5i")]
z_index = 2
layout_mode = 2
stretch_mode = 3
script = null

[node name="Label2" type="Label" parent="GridContainer/TextureButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = 57.0
offset_right = -11.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0.6901961, 0.8627451, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_1m5pn")
theme_override_font_sizes/font_size = 50
text = " Mengenal Emosi Anak"
horizontal_alignment = 1

[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="GridContainer/TextureButton" to="." method="lv1_on_pressed"]
[connection signal="pressed" from="GridContainer/TextureButton2" to="." method="lv2_on_pressed"]
